--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,7 @@
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
         }
         .header {
-            background-color: #6f1515;
+            background-color: #0F5599;
             padding: 20px;
             text-align: center;
         }
@@ -43,12 +43,12 @@
             display: inline-block;
             padding: 15px 30px;
             background-color: #f9f2f2;
-            color: #6f1515;
+            color: #0F5599;
             font-size: 28px;
             font-weight: bold;
             letter-spacing: 4px;
             border-radius: 6px;
-            border: 1px dashed #6f1515;
+            border: 1px dashed #0F5599;
         }
         .button-container {
             text-align: center;
@@ -57,7 +57,7 @@
         .button {
             display: inline-block;
             padding: 14px 35px;
-            background-color: #6f1515;
+            background-color: #0F5599;
             color: white;
             text-decoration: none;
             border-radius: 4px;
@@ -100,9 +100,9 @@
     </div>
 
     <div class="footer">
-        <p>© 2025 Universidad de Belgrano. Todos los derechos reservados.</p>
+        <p>© 2025 [COMPANY NAME]. Todos los derechos reservados.</p>
         <p>Si tienes problemas con el botón, copia y pega la siguiente URL en tu navegador:<br>
-            <span style="color: #6f1515;">%URL%</span></p>
+            <span style="color: #0F5599;">%URL%</span></p>
     </div>
 </div>
 
